[package]
name = "test_dymod"
version = "0.1.0"
authors = ["***Realname*** ***Lastname*** <***realname***.***lastname***.000@gmail.com"]
edition = "2018"

[dependencies]
dymod = { path = "../dymod", version = "*" }
rand = "0.8"

[features]
default = ["dymod/auto-reload"]
force-static = ["dymod/force-static", "dymod/auto-reload"]
force-dynamic = ["dymod/force-dynamic"]
auto-reload = ["dymod/force-dynamic", "dymod/auto-reload"]
